[PN-14981] refactor: changed code to imperative to reactive and added exceptions for ConditionalCheckFails