@@ -3,7 +3,6 @@ package it.pagopa.pn.actionmanager.middleware.dynamo;
 import ch.qos.logback.classic.Level;
 import ch.qos.logback.classic.spi.ILoggingEvent;
 import ch.qos.logback.core.read.ListAppender;
-import it.pagopa.pn.actionmanager.LocalStackTestConfig;
 import it.pagopa.pn.actionmanager.config.BaseTest;
 import it.pagopa.pn.actionmanager.exceptions.PnNotFoundException;
 import it.pagopa.pn.actionmanager.middleware.dao.actiondao.FutureActionDao;
@@ -11,26 +10,22 @@ import it.pagopa.pn.actionmanager.middleware.dao.actiondao.dynamo.FutureActionDa
 import it.pagopa.pn.commons.abstractions.impl.MiddlewareTypes;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.context.annotation.Import;
 import org.springframework.test.context.TestPropertySource;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
 
 import java.util.List;
 
 @TestPropertySource(properties = {
         FutureActionDao.IMPLEMENTATION_TYPE_PROPERTY_NAME + "=" + MiddlewareTypes.DYNAMO
 })
-class FutureActionDaoDynamoTestIT extends BaseTest.WithLocalStack{
+class FutureActionDaoDynamoTestIT extends BaseTest.WithLocalStack {
     @Autowired
     private FutureActionDao futureActionDao;
 
     @Test
-    void unscheduleActionFailSilent() {
+    void unscheduleActionFail() {
         String timeSlot = "2021-09-16T15:24";
         String actionId = "Test_unscheduleActionFailSilent_actionId";
 
@@ -44,7 +39,7 @@ class FutureActionDaoDynamoTestIT extends BaseTest.WithLocalStack{
         // Aggiungi l'appender al logger
         ((ch.qos.logback.classic.Logger) fooLogger).addAppender(listAppender);
 
-        // Verifica che il metodo non lanci eccezioni
+        // Prova a disschedulare un'azione non esistente
         Assertions.assertThrows(
                 PnNotFoundException.class,
                 () -> futureActionDao.unscheduleAction(timeSlot, actionId)
@@ -54,9 +49,9 @@ class FutureActionDaoDynamoTestIT extends BaseTest.WithLocalStack{
         List<ILoggingEvent> logsList = listAppender.list;
 
         // Verifica che il messaggio di log sia corretto
-        String expectedMessage = String.format("Action not found for timeSlot=%s and actionId=%s", timeSlot, actionId);
-        Assertions.assertEquals(expectedMessage, logsList.get(0).getFormattedMessage());
-        Assertions.assertEquals(Level.ERROR, logsList.get(0).getLevel());
+        String expectedMessage = String.format("Future action with actionId=%s and timeSlot=%s not found", actionId, timeSlot);
+        Assertions.assertEquals(expectedMessage, logsList.getFirst().getFormattedMessage());
+        Assertions.assertEquals(Level.INFO, logsList.getFirst().getLevel());
     }
 
 }
